docs: add bilingual translation for virtual threads guide